--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/vite": "^4.1.17",
     "antd": "^6.0.1",
     "axios": "^1.13.2",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
