--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.0",
     "recharts": "^3.5.1",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
